사용자에게 유의미한 결과값을 제공하기 위해 거리를 200m 로 조정